--- a/.github/workflows/pages-deploy.yml
+++ b/.github/workflows/pages-deploy.yml
@@ -26,4 +26,4 @@ jobs:
           bundler-cache: true
 
       - name: Deploy
-        run: bash tools/deploy.shs
+        run: bash tools/deploy.sh
