--- a/_config.yml
+++ b/_config.yml
@@ -40,8 +40,7 @@ social:
   email: example@doamin.com             # change to your email address
   links:
     # The first element serves as the copyright owner's link
-    - https://twitter.com/username      # change to your twitter homepage
-    - https://github.com/username       # change to your github homepage
+    - https://github.com/shooter-squad
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
     # - https://www.linkedin.com/in/username
@@ -79,7 +78,7 @@ theme_mode: # [light|dark]
 img_cdn: 
 
 # the avatar on sidebar, support local or CORS resources
-avatar: '/resource/avatar.jpg'
+avatar: '/resource/logo.png'
 
 # boolean type, the global switch for ToC in posts.
 toc: false
